Fix footer in dark mode

--- a/src/stylesheets/basic-full.scss
+++ b/src/stylesheets/basic-full.scss
@@ -91,9 +91,10 @@ p.sub {
   body,
   .email-body,
   .email-body_inner,
-  .email-content
+  .email-content,
   .email-wrapper,
-  .email-masthead {
+  .email-masthead,
+  .email-footer {
     background-color: $c-gray-900 !important;
     color: #FFF !important;
   }
